# scratchx_PLC_S5

./: .gitmodules  PLC_S5.js  README.md  index.html
compiler/: instructions.txt
extension/commserver/: README  configure.ac
extension/commserver/src/: Makefile.am  PLC_IO_comm.c  PLC_IO_comm.h  PLC_IO_server.c  PLC_IO_server.h  main.c  websocket_server.c  websocket_server.h  websocket_server_private.h
extension/config/: PLC_S5.s2e
extension/config/http_root/: PLC_S5_comm.js  index.xhtml  latency_test.js  latency_test.xhtml  ws_test.js  ws_test.xhtml
extension/helper/: README  configure.ac
extension/helper/src/: AS511_comm.c  AS511_comm.h  Makefile.am  httpd.c  httpd_marshal.list  main.c  s5_tool.c
firmware/: Makefile  bootloader.c  fillmem.py  ports.txt
firmware/cmdtool/: Makefile  cmdtool.c  crc.c  crc.h  ihex.c  ihex.h  rom_interrupt.asm  uploadram.py  zmodem.c  zmodem.h  zmodem_defs.h
firmware/common/: adc.c  adc.h  crc8.c  crc8.h  dac.c  dac.h  ext_io.h  mem_alloc.c  mem_alloc.h  rtc.h
firmware/contiki/: README
firmware/contiki/sys/: pt.h
firmware/ramutil/: Makefile  cmdtool.c  ext_io.c  ext_io.h  int_io.c  int_io.h  jmp_table.asm  module_types.txt  rtc.c  test.c  uploadram.py
firmware/scratch_server/: Makefile  scratch_server.c  serial.c  serial.h
include/: plc_protocol.h
tools/iotool/: Makefile.am  README  configure.ac
tools/iotool/src/: Makefile.am  PLC_comm.c  PLC_comm.h  iotool.c  iotool.gschema.xml  serial.c  serial.h
